--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,11 +20,13 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile files('libs/firichsdk.jar')
     compile files('libs/Universal_SDK_1.00.008.jar')
     compile files('libs/dpuareu.jar')
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
+    compile files('libs/FitPrintAndroidUsb_v1011.jar')
+    compile files('libs/dom4j-2.0.0.jar')
 }
