--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 14
     buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "firich.com.firichsdk_test"
-        minSdkVersion 14
-        targetSdkVersion 23
+        minSdkVersion 12
+        targetSdkVersion 14
         versionCode 1
         versionName "1.0"
     }
@@ -20,13 +20,12 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile files('libs/firichsdk.jar')
     compile files('libs/Universal_SDK_1.00.008.jar')
     compile files('libs/dpuareu.jar')
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
     compile files('libs/FitPrintAndroidUsb_v1011.jar')
     compile files('libs/dom4j-2.0.0.jar')
+    compile files('libs/SiiAndroidSDK.jar')
 }
