--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,10 +21,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:sharedUserId="android.uid.system"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:windowSoftInputMode="stateVisible">
+        android:sharedUserId="android.uid.system">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,8 +31,7 @@
         </activity>
         <activity
             android:name=".IDICCard"
-            android:label="@string/title_activity_idiccard"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/title_activity_idiccard" />
         <activity
             android:name=".UareUSampleJava"
             android:configChanges="keyboardHidden|orientation|screenSize"
@@ -73,6 +69,7 @@
         <activity android:name=".MainSysKingICCardActivity" />
         <activity android:name=".MainRFIDActivity" />
         <activity android:name=".MainHIDActivity"></activity>
+        <activity android:name=".MainThermalPrinterD10Activity" />
     </application>
 
 </manifest>
