--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:sharedUserId="android.uid.system">
+        android:label="@string/app_name">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,46 +30,54 @@
         </activity>
         <activity
             android:name=".IDICCard"
-            android:label="@string/title_activity_idiccard" />
+            android:label="@string/title_activity_idiccard"
+            android:exported="true"/>
         <activity
-            android:name=".UareUSampleJava"
+            android:name="firich.com.firichsdk_test.UareUSampleJava"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="true"
             android:label="FingerPrinter" />
         <activity
-            android:name=".GetReaderActivity"
+            android:name="firich.com.firichsdk_test.GetReaderActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
+            android:exported="true"
             android:label="FingerPrinterGetReader">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".VerificationActivity"
+            android:name="firich.com.firichsdk_test.VerificationActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="FingerPrinterVerification">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainNFCActivity">
-
+        <activity android:name=".MainNFCActivity"
+            android:exported="true">
             <!--
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             -->
         </activity>
-        <activity android:name=".MainThermalPrinterActivity" />
-        <activity android:name=".MainLCMActivity" />
-        <activity android:name=".MainCashDrawerActivity" />
-        <activity android:name=".MainSysKingICCardActivity" />
-        <activity android:name=".MainRFIDActivity" />
-        <activity android:name=".MainHIDActivity" />
-        <activity android:name=".MainThermalPrinterD10Activity" />
-        <activity android:name=".MainRS232Activity"></activity>
+        <activity android:name=".MainThermalPrinterActivity"
+            android:exported="true"/>
+        <activity android:name=".MainLCMActivity"
+            android:exported="true"/>
+        <activity android:name=".MainCashDrawerActivity"
+            android:exported="true"/>
+        <activity android:name=".MainSysKingICCardActivity"
+            android:exported="true"/>
+        <activity android:name=".MainRFIDActivity"
+            android:exported="true"/>
+        <activity android:name=".MainHIDActivity"
+            android:exported="true"/>
+        <activity android:name=".MainThermalPrinterD10Activity"
+            android:exported="true"/>
+        <activity android:name=".MainRS232Activity"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
