1. Edit Text should not be focus to show soft keyboard. 2. Finger printer: Refined UI test flow.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,13 +30,11 @@
         </activity>
         <activity
             android:name=".IDICCard"
-            android:label="@string/title_activity_idiccard"
             android:exported="true"/>
         <activity
             android:name="firich.com.firichsdk_test.UareUSampleJava"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:exported="true"
-            android:label="FingerPrinter" />
+            android:exported="true"/>
         <activity
             android:name="firich.com.firichsdk_test.GetReaderActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
