--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -101,7 +101,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainEthernetActivity"></activity>
+        <activity android:name=".MainEthernetActivity"
+            android:exported="true"/>
+        <activity android:name=".MainSDCardActivity"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
