--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -101,11 +101,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainEthernetActivity"
-            android:exported="true"/>
-        <activity android:name=".MainSDCardActivity"
-            android:exported="true">
-        </activity>
+        <activity
+            android:name=".MainEthernetActivity"
+            android:exported="true" />
+        <activity
+            android:name=".MainSDCardActivity"
+            android:exported="true"></activity>
+        <activity android:name=".MainUSBStorageActivity"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
