--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
+
+
     <application
         android:name=".FECApplication"
         android:allowBackup="true"
@@ -31,9 +33,7 @@
             <!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
-
             </intent-filter>
             -->
         </activity>
@@ -95,20 +95,33 @@
             android:name=".MainRS232Activity"
             android:exported="true" />
         <activity android:name=".MainFECTestActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity
             android:name=".MainEthernetActivity"
             android:exported="true" />
         <activity
             android:name=".MainSDCardActivity"
-            android:exported="true"></activity>
-        <activity android:name=".MainUSBStorageActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
+        <activity
+            android:name=".MainUSBStorageActivity"
+            android:exported="true" />
+        <activity android:name=".MainCameraAFActivity"
+            android:exported="true">
+            <!--
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            -->
+        </activity>
     </application>
 
 </manifest>
